--- a/index3.html
+++ b/index3.html
@@ -16,8 +16,9 @@
     </style>
        <table border="1">
            <caption>table:class time table</caption>
+           <thead>
            
-        <tr>
+        <tr bgcolor="gray">
             
             <th> day/Period</th>
             <th> 9:30-10:20</th>
@@ -30,6 +31,9 @@
             <th> 03:10-04:00</th>
 
         </tr>
+        </thead>
+
+        <tbody>
         <tr> 
             <td>Monday</td>
             <td>Maths</td>
@@ -39,7 +43,7 @@
             <td colspan="3" style="bgcolor:skyblue;"><center>Lab</center></td>
             <td>Physics</td>
         </tr>
-        <tr>
+        <tr bgcolor="lightgray">
         <td>Tuesday</td>
         <td colspan="3" style="bgcolor:skyblue;"><center>Lab</center> </td>
         <td>English</td>
@@ -55,7 +59,7 @@
             <td>Chemistry</td>
             <td colspan="3" style="bgcolor:skyblue;"><center>Library</center></td>
         </tr>
-        <tr>
+        <tr bgcolor="lightgray">
             <td>Thursday</td>
         <td>Maths</td>
         <td>English</td>
@@ -71,7 +75,7 @@
              <td>Chemistry</td>
              <td>Physics</td>
         </tr>
-        <tr>
+        <tr bgcolor="lightgray">
             <td>Saturday</td>
             <td>Maths</td>
             <td>English</td>
@@ -79,6 +83,7 @@
             <td colspan="3" style="bgcolor:skyblue;"><center>Seminar</center></td>
             <td>Physics</td>
         </tr>
+        </tbody>
     </table>
 </body>
 </html>
